# ai-guider

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md  clients.md  cursor-integration.md  installation.md  publishing.md  usage.md
hooks/: ai-guider-pretool.sh  ai-guider-session.sh  ai_guider_hook.py  hooks.json.template
src/guider/: __init__.py  cli.py  client_setup.py  codebase_map.py  cursor_setup.py  dashboard.py  doctor.py  export.py  governance.py  hooks_runtime.py  logging_config.py  preferences.py  reporting.py  service.py  watch.py  workspace.py
src/guider/config/: __init__.py  loader.py
src/guider/mcp/: __init__.py  prompts.py  resources.py  server.py  tools.py
src/guider/mission/: __init__.py  builder.py  classifier.py  context_profiles.py  lifecycle.py  models.py  plan_refine.py  session.py  templates.py  tracker.py
src/guider/plugins/: __init__.py  base.py  loader.py  personal.py  software_engineering.py
src/guider/policies/: __init__.py  engine.py  profiles.py
src/guider/storage/: __init__.py  database.py
src/guider/validators/: __init__.py  assumptions.py  completion.py  (+4 more)
tests/: conftest.py  test_cli.py  test_client_setup.py  test_codebase_map.py  test_cursor_setup.py  test_doctor.py  test_governance.py  test_hooks_runtime.py  test_mcp.py  test_mission_builder.py  test_mission_lifecycle.py  test_mission_models.py  test_mission_tracker.py  test_next_level.py  test_plugins.py  test_policies.py  test_service.py  test_storage.py  test_v02_features.py  test_validators.py
(+3 files in other folders)
