[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-guider"
version = "0.2.0"
description = "Local-first MCP server for AI agent guidance and mission governance"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AI Guider Contributors" }]
keywords = ["mcp", "ai", "agents", "governance", "mission"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
ai-guider = "guider.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/guider"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["guider"]
omit = ["tests/*"]
